# codee_test

./: README.md  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml
src/: settings.py
src/alembic/: env.py
src/alembic/versions/: 96019c81396a_add_table_user.py  cb60aee36f01_add_table_note.py  da1d18379d18_add_unique_constraint_on_email.py  f8d5469d79f3_add_add_column_user_id.py
src/api/: app.py
src/api/auth/: dependencies.py  routers.py  schemas.py  utils.py
src/api/notes/: routers.py  schemes.py
src/db/: base.py
src/db/models/: __init__.py  notes.py  user.py
tests/: test_api.py
